# KI-ana

./: .env.example  .env.staging.example  .gitignore  =2  =3.0  ABC_COMPLETE_STATUS.md  ADDRESSBOOK_IMPLEMENTATION_COMPLETE.md  ADMIN_LOGS_FINAL_FIX.md  ADMIN_LOGS_POLLING_FIX.md  ADMIN_LOGS_STATUS.md  AGENT_LOOP_FIX.md  ALL_FEATURES_ONLINE_COMPLETE.md  ALL_FIXES_COMPLETE.md  ALL_FIXES_SUMMARY.md  ALL_SYSTEMS_OPERATIONAL.md  ARCHITECTURE_AUDIT.md  AUDIT_REPORT_FINAL_2025-10-30.md  AUDIT_SUMMARY.md  AUDIT_SUMMARY.txt  AUTONOMOUS_GOALS_COMPLETE.md  AUTO_REFLECTION_COMPLETE.md  AUTO_SIGN_HASH_COMPLETE.md  BACKEND_FIX_SUMMARY.md  BACKEND_FRONTEND_STATUS.md  BACKEND_START_CLEAN.sh  BENUTZER_ANLEITUNG_MEMORY_2025-10-30.md  BLOCKVIEWER_AND_LOGS_FIX.md  BLOCK_VERIFICATION_COMPLETE.md  BLOCK_VIEWER_FINAL.md  BLOCK_VIEWER_FIX.md  BLOCK_VIEWER_HASH_SIGN_FIXES.md  BLOCK_VIEWER_IMPROVEMENTS.md  CHANGELOG.md  CHAT_FORMATTING_FINAL_FIX.md  CHAT_FORMATTING_UPGRADE.md  CHAT_FORMATTING_V2.md  CHAT_INTERFACE_V2_COMPLETE.md  CHAT_NAVBAR_MOBILE_FIXES.md  CHAT_SYNC_ISSUE.md  CHECK_LOGIN_DB.md  (+235 more)
alembic/: env.py
api/: subki_feedback.py  system_status.py
auth/: jwt_auth.py
backend/: Dockerfile  app.py  gunicorn.conf.py  requirements.txt  seed.py  test_login.py
blockchain/: knowledge_chain.json
crawler/: media_crawler.py
data/: addressbook.index.json  autonomy_config.json  blocks.json  creative_config.json  device_id.txt  ethic_core.json  lifecycle_state.json  mirror_topics.json  nodes.json  (+4 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
(+9045 files in other folders)
